added the school schema as the main authority
