# speaksafe-backend/src/routes/api.route.ts
@@ -4,6 +4,7 @@ import authRoutes from "../features/auth/auth.routes";
 import reportRoutes from "../features/reports/report.routes";
 import adminRequestRoutes from "../features/admin-requests/request.routes";
 import adminUserRoutes from "../features/admin-users/user.routes";
+import schoolRoutes from "../features/schools/school.routes";
 
 const api = express.Router();
 
@@ -11,5 +12,6 @@ api.use("/auth", authRoutes);
 api.use("/reports", reportRoutes);
 api.use("/admin/requests", adminRequestRoutes);
 api.use("/admin/users", adminUserRoutes);
+api.use("/schools", schoolRoutes);
 
 export default api;
